# KS0555-Steam-Deck-Controller-2

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  build-steamdeck.sh  eslint.config.ts  install-on-steamdeck.sh  justfile  lefthook.yml  opencode.json  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json  upgrade-robot-controller.sh
.agents/rules/: typescript.md
.github/: release-please-config.json
.github/workflows/: build.yml  ci.yml  release-please.yml  validate-release-pr.yml
.husky/: commit-msg  pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  (+6 more)
apps/frontend/src-tauri/: ARCHITECTURE.md  Cargo.toml  Info.plist  tauri.conf.json
apps/frontend/src-tauri/capabilities/: main.json
apps/frontend/src-tauri/permissions/: ble.toml  default.toml
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/frontend/src-tauri/src/adapters/: gilrs_adapter.rs
apps/frontend/src-tauri/src/ble/: mod.rs  state.rs
apps/frontend/src-tauri/src/domain/: direction.rs
apps/frontend/src-tauri/src/gamepad/: mod.rs
apps/frontend/src-tauri/tests/: ble_connect_test.rs  ble_disconnect_test.rs  ble_event_test.rs  ble_linux_filter_test.rs  ble_send_test.rs  ble_state_test.rs  domain_test.rs  flatpak_sandbox_test.rs  ports_test.rs  tauri_shell_test.rs  validation_test.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  RUNNING.md  STEAM_DECK.md  TESTING.md
flatpak/: Dockerfile  README.md  VALIDATION-CHECKLIST.md  build.sh  com.ks0555.robotcontroller.metainfo.xml  com.ks0555.robotcontroller.yaml  docker-build.sh
(+276 files in other folders)
