[package]
name = "robot-controller"
version = "0.1.5"
description = "Steam Deck Robot Controller - Tauri v2"
authors = ["KS0555"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = ["default", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BLE communication (Phase 7)
btleplug = "0.12.0"

# Gamepad input (Phase 8)
gilrs = { version = "0.11.1", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
uuid = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Steam Deck requires proper evdev support for gamepad input
gilrs = { version = "0.11.1", features = ["serde"] }
